# python-textile

./: .flake8  .gitignore  .travis.yml  CHANGELOG.textile  CONTRIBUTORS.txt  Makefile  README.textile  pyproject.toml  pytest.ini  setup.py
.github/workflows/: lint_and_test.yml
tests/: test_attributes.py  test_block.py  test_cli.py  test_footnoteRef.py  test_getRefs.py  test_getimagesize.py  test_github_issues.py  test_glyphs.py  test_image.py  test_imagesize.py  test_lists.py  test_retrieve.py  test_span.py  test_subclassing.py  test_table.py  test_textile.py  test_textilefactory.py  test_urls.py  test_utils.py  test_values.py
tests/fixtures/: README.txt
textile/: __init__.py  core.py  functions.py  regex_strings.py  textilefactory.py  utils.py  version.py
textile/objects/: block.py  list.py  table.py
textile/tests/: __init__.py
textile/tools/: imagesize.py
